fix: Adjust text overflow handling in ExerciseHeader component

--- a/src/components/Workout/WorkoutExercises/Exercise/ExerciseHeader/ExerciseHeader.module.scss
+++ b/src/components/Workout/WorkoutExercises/Exercise/ExerciseHeader/ExerciseHeader.module.scss
@@ -13,4 +13,9 @@
   color: colors.$blue;
   white-space: nowrap;
   overflow: hidden;
+
+  span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
